# CUDA_computeShaders

./: CMakeLists.txt  README.md  new_shader.sh  run.sh
lib/: CMakeLists.txt  shader.cc  shader.hh  shader_frames.cc  shader_frames.hh  shader_functions.cc  shader_functions.hh
src/: main.cc
src/shaders/: config.hh  shader_to_run.txt  template.cc
src/shaders/blank/: callback.cc
src/shaders/mouse_tracker/: main.cc
src/shaders/rosace/: callback.cc  main.cc
src/shaders/timed_uv/: callback.cc
